--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:robchou/robchou.github.io.git
+  branch: master
