--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Robin's Blog
-subtitle:
+title: LESS IS MORE
+subtitle: KEEP IT SIMPLE , STUPID !
 description:
 author: Robin Chou
 language: zh-Hans
